Update to imgui 11, disable example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 
 [dependencies]
 imnodes-sys = { version = "0.1.0", path = "imnodes-sys" }
-imgui = "0.10.0"
+imgui = "0.11.0"
 
 [features]
 # export all low level functions
@@ -19,6 +19,7 @@ include_low_level_bindings = []
 [workspace]
 members = [
     "imnodes-sys",
-    "imnodes-wgpu-examples",
+    # Re-add when less broken
+    # "imnodes-wgpu-examples",
     "imnodes-sys-bindgen",
 ]
